update of references

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -18,7 +18,7 @@ Natural selection seems to be the more popular model to the neutral hypothesis, 
 
 ## Selection
 
-Possible types of selection that can act upon a population include balancing, background or directional selection. Balancing selection maintains both alleles in a population and is often the case when the heterozygote has an advantage over the homozygote and can be referred to as over dominant selection. An example of this is MHC class 1 [@Hughes1988] or sickle-cell anaemia [@ALLISON1956]. Background selection is a reduction of genetic diversity at a locus because of deleterious selection acting on a separate but linked locus [@Charlesworth1993]. Background selection can be thought of as the opposite effect to genetic hitch-hiking. Directional selection operates in two fashions, positive or negative. Positive selection is where an allele conveys an advantage in fitness that enhances reproductive success, resulting in the beneficial allele increasing in frequency within the population. An example of positive selection is the lactase gene in European populations which enables the absorption of lactose [@Bersaglieri2004]. Negative selection occurs when the allele conveys a fitness disadvantage and ends with reduced reproductive success, decreasing the frequency of the allele in the population. The cystic fibrosis gene _CFTR_, is an example of negative selection, where in males splicing mutations can lead to sterility [@Pagani2005].
+Possible types of selection that can act upon a population include balancing, background or directional selection. Balancing selection maintains both alleles in a population and is often the case when the heterozygote has an advantage over the homozygote and can be referred to as over dominant selection. An example of this is MHC class 1 [@Hughes1988] or sickle-cell anaemia [@Allison1956]. Background selection is a reduction of genetic diversity at a locus because of deleterious selection acting on a separate but linked locus [@Charlesworth1993]. Background selection can be thought of as the opposite effect to genetic hitch-hiking. Directional selection operates in two fashions, positive or negative. Positive selection is where an allele conveys an advantage in fitness that enhances reproductive success, resulting in the beneficial allele increasing in frequency within the population. An example of positive selection is the lactase gene in European populations which enables the absorption of lactose [@Bersaglieri2004]. Negative selection occurs when the allele conveys a fitness disadvantage and ends with reduced reproductive success, decreasing the frequency of the allele in the population. The cystic fibrosis gene _CFTR_, is an example of negative selection, where in males splicing mutations can lead to sterility [@Pagani2005].
 
 \Gls{ld} can arise at sites that are under directional selection, even when the loci are unlinked [@Felsenstein1965]. Recombination will act to reduce this \gls{ld}. @Smith1974 came up with the concept of genetic hitch-hiking to explain the rise in \gls{ld} during a selective event. Genetic hitch-hiking occurs when a locus is under selection, linked sites on the same chromosome will increase in frequency, causing a change in frequency of the alleles that are not on the same chromosome.
 
@@ -197,7 +197,7 @@ Many of these statistics were developed to investigate selection at a particular
 
 Identification of exactly what is deemed as being significantly selected has issues. The current practice is to take outlier loci, usually from an empirical distribution of the selection statistic and report these as significant (an empirical P-value). This is not necessarily indicative of selection, as cut off levels are created subjectively rather than derived from the model [@Qanbari2012a]. Using an empirical approach will result in many false positives, however this is considered an acceptable approach for selecting candidate genes so long as it is realised the false positive rate is high [@Kelley2006].
 
-In order to use haplotypic methods requires being able to construct the haplotype. Currently this involves the need for the phasing of haplotypes from genomic data. Phasing is the process of determining which alleles are found together on the same physical chromosomes There are a number of ways that this can be done, such as through a pedigree, through the use of large population data, or using the reads from next generation sequencing. Phasing through pedigree information is utilised in most agricultural species, whereas for human populations the population genotypes are largely from unrelated individuals. Phasing of unrelated individuals currently relies on probabilistic methods [@Browning2009; @Delaneau2012] in order to make the best guess at the individuals’ haplotype. Newer methods have been developed to use the reads from next generation sequencing and are able to trace a haplotype across multiple overlapping reads, however these methods are heavily dependent on the depth of coverage and can also be used to complement probabilistic phasing methods.
+In order to use haplotypic methods requires being able to construct the haplotype. Currently this involves the need for the phasing of haplotypes from genomic data. Phasing is the process of determining which alleles are found together on the same physical chromosomes There are a number of ways that this can be done, such as through a pedigree, through the use of large population data, or using the reads from next generation sequencing. Phasing through pedigree information is utilised in most agricultural species, whereas for human populations the population genotypes are largely from unrelated individuals. Phasing of unrelated individuals currently relies on probabilistic methods [@Browning2009; @Delaneau2012, @Delaneau2013] in order to make the best guess at the individuals’ haplotype. Newer methods have been developed to use the reads from next generation sequencing and are able to trace a haplotype across multiple overlapping reads, however these methods are heavily dependent on the depth of coverage and can also be used to complement probabilistic phasing methods.
 
 
 ## Improving GWAS
@@ -231,7 +231,7 @@ Pathways have been hypothesised to be involved in the genic adaptation of popula
 
 ### Genome-wide Selection
 
-Genome wide selection in humans has been investigated by @sabeti2006positive, @pickrell2009signals,@voight2006map, @Hancock2008, the 1000 Genomes Project Consortium [@1KGP2010;@Abecasis2012], @Grossman2010, and @Colonna2014. The population datasets used involved @Hapmap2005 , Human Genome Diversity Project [@Cann2002; @Rosenburg2002] and @1KGP2010. The 1000 Genomes Project Consortium [@1KGP2010; @Abecasis2012] reported genome wide diversification between main population groups based on F~ST~ and $\Delta$\gls{daf}. Genome wide mean F~ST~ was found to only be a maximum of 8%, however several thousand SNPs had large F~ST~ indicating local population adaptation [@1KGP2010]. The analysis also found 139 non-synonymous SNPs with large frequency differences between populations. Investigation of the \gls{1kgp} data set was also performed by @Colonna2014. Using $\Delta$\gls{daf}, it was found that sites of high population differentiation ($\Delta$\gls{daf} > 0.7 between and > 0.25 within continents) clustered together, the same was found for sites of low differentiation. Genes containing highly differentiated sites were likely to also have additional evidence of positive selection in a third. 
+Genome wide selection in humans has been investigated by @sabeti2006positive, @pickrell2009signals,@voight2006map, @Hancock2008, the 1000 Genomes Project Consortium [@1KGP2010;@1KGP2012], @Grossman2010, and @Colonna2014. The population datasets used involved @Hapmap2005 , Human Genome Diversity Project [@Cann2002; @Rosenburg2002] and @1KGP2010. The 1000 Genomes Project Consortium [@1KGP2010; @1KGP2012] reported genome wide diversification between main population groups based on F~ST~ and $\Delta$\gls{daf}. Genome wide mean F~ST~ was found to only be a maximum of 8%, however several thousand SNPs had large F~ST~ indicating local population adaptation [@1KGP2010]. The analysis also found 139 non-synonymous SNPs with large frequency differences between populations. Investigation of the \gls{1kgp} data set was also performed by @Colonna2014. Using $\Delta$\gls{daf}, it was found that sites of high population differentiation ($\Delta$\gls{daf} > 0.7 between and > 0.25 within continents) clustered together, the same was found for sites of low differentiation. Genes containing highly differentiated sites were likely to also have additional evidence of positive selection in a third. 
 
 There was also a high association of highly differentiated sites with genes and gene regulatory elements. Genes that often return as having significant selection statistics when comparing populations are involved in skin pigmentation [@Grossman2010; @1KGP2010; @voight2006map], metabolism of sugars [@tang2007new; @voight2006map], drug metabolism [@tang2007new], immune system [@Grossman2010; @tang2007new], and climate adaptation [@Hancock2008]. Genes that play a role in adaptation to climate extremes are likely to play a role in metabolic disorders that make up metabolic syndrome [@Hancock2008]. In contrast, variation in metabolic related genes can lead to elite phenotypes in athletes [@Ahmetov2009a].
 
@@ -245,14 +245,14 @@ Large population comparison studies have used Oceanic populations but analyses w
 
 The World Health Organisation has previously defined Metabolic Syndrome to be glucose intolerance, or diabetes mellitus, and or insulin resistance combined with at least two of the following: impaired glucose regulation or diabetes, insulin resistance, raised arterial pressure, raised plasma triglycerides or low HDL-cholesterol, central obesity, and microalbuminuria [@Alberti1998]. Hyperuricaemia can also be considered a component but is not required for the condition to be recognised. Hyperuricaemia is defined as a serum uric acid $\geq$ 0.42 mmol/L in males and $\geq$ 0.36 mmol/L in females [@Choi2007b]. There has been a slight revision and refinement in the criteria for a diagnosis of metabolic syndrome [@Alberti2009]. The requirement for diabetes mellitus and or  insulin resistance is no longer used, instead a requirement of having 3 of the 5 co-morbidities is used.
 
-Obesity is defined as a \gls{bmi} of >30 kg/m2 and is a contributing risk factor for many other diseases such as type II diabetes (T2D) and cardiovascular disease [@Haslam2005]. Obesity has been a key focus for research as the prevalence continues to increase and is posing a major threat to health systems in many countries [@Wang2011]. With respect to Polynesian populations obesity is a major problem with an obesity rate of 68%. New Zealand M\={a}ori have an obesity prevalence of 48% [@Health2013]. From 2012 to 2013 the prevalence of obesity increased by 6% in Pacific populations. Heritability of \gls{bmi} ranges from 45% to 84% in twin studies [@Schousboe2003].
+Obesity is defined as a \gls{bmi} of >30 kg/m2 and is a contributing risk factor for many other diseases such as type II diabetes (T2D) and cardiovascular disease [@Haslam2005]. Obesity has been a key focus for research as the prevalence continues to increase and is posing a major threat to health systems in many countries [@Wang2011]. With respect to Polynesian populations obesity is a major problem with an obesity rate of 68%. New Zealand M$\bar{a}$ori have an obesity prevalence of 48% [@Health2013]. From 2012 to 2013 the prevalence of obesity increased by 6% in Pacific populations. Heritability of \gls{bmi} ranges from 45% to 84% in twin studies [@Schousboe2003].
 
-Type II diabetes is diagnosed by a fasting blood glucose of >7.0 mmol/L or 2-hr post blood glucose load of  >11.1 mmol/L [@Alberti1998]. The risk of developing T2D is strongly correlated with excess weight [@Rana2007]. The prevalence of diabetes is 13% in Polynesians and 7% in NZ M\={a}ori [@Health2013] compared to 5.5% in Europeans [@Winnard2013a]. In New Zealand, the rate of diabetes is twice that in M\={a}ori compared to non-M\={a}ori, and the rate is 3.6 fold higher in Pacific compared to non-Pacific ethnicities. 
+Type II diabetes is diagnosed by a fasting blood glucose of >7.0 mmol/L or 2-hr post blood glucose load of  >11.1 mmol/L [@Alberti1998]. The risk of developing T2D is strongly correlated with excess weight [@Rana2007]. The prevalence of diabetes is 13% in Polynesians and 7% in NZ M$\bar{a}$ori [@Health2013] compared to 5.5% in Europeans [@Winnard2013a]. In New Zealand, the rate of diabetes is twice that in M$\bar{a}$ori compared to non-M$\bar{a}$ori, and the rate is 3.6 fold higher in Pacific compared to non-Pacific ethnicities. 
 
 There have been multiple loci associated with T2D [@Billings2010], however, @Chen2010 found no evidence for enrichment in selection for \gls{bmi}, but found significant enrichment for T2D. The genes associated with T2D have been found to be differentiated by population, however the individual \gls{snp}s are often not [@pickrell2009signals]. @Koh2014 identified 6 \gls{snp}s in or near 9 genes that had been reported as T2D associated and overlapped with evidence of positive selection in East Asian populations. Common variants that have been found in European populations associating with obesity don't replicate in the Samoan population [@Karns2012]. The non-replication of European variants in Polynesians and the high prevalence of obesity in Polynesians suggest there is likely to be 
-some population specific variants that are yet to be identified. Rare variants tend to be recent and therefore geographically restricted [@Abecasis2012].
+some population specific variants that are yet to be identified. Rare variants tend to be recent and therefore geographically restricted [@1KGP2012].
 
-Hyperuricaemia can be caused by diet, genetic predisposition or under-excretion of urate. The elevated uric acid levels in the blood contributes to the forming of urate crystals in the joints, triggering an inflammatory response by stimulating the synthesis and release of humoral and cellular inflammatory mediators [@Choi2005a]. There is a clear relationship between hyperuricaemia and the causal role in gout [@Snaith2004]. There is also an increased prevalence in gout in different ethnicities. New Zealand M\={a}ori and Pacific ethnicities have a prevalence of 12% and 14% respectively in males, compared to 4% in both European and Asian males [@Winnard2012; @Winnard2013a]. While New Zealand M\={a}ori and Polynesians have an increased prevalence of hyperuricaemia, they also have a genetic predisposition to elevated urate and risk of gout  [@Hollis-Moffatt2009; @Hollis-Moffatt2011; @Phipps-Green2010]. The prevalence of metabolic syndrome in US gout patients is ~60%, or nearly 3 fold higher than US adults without gout [@Choi2007b].
+Hyperuricaemia can be caused by diet, genetic predisposition or under-excretion of urate. The elevated uric acid levels in the blood contributes to the forming of urate crystals in the joints, triggering an inflammatory response by stimulating the synthesis and release of humoral and cellular inflammatory mediators [@Choi2005a]. There is a clear relationship between hyperuricaemia and the causal role in gout [@Snaith2004]. There is also an increased prevalence in gout in different ethnicities. New Zealand M$\bar{a}$ori and Pacific ethnicities have a prevalence of 12% and 14% respectively in males, compared to 4% in both European and Asian males [@Winnard2012; @Winnard2013a]. While New Zealand M$\bar{a}$ori and Polynesians have an increased prevalence of hyperuricaemia, they also have a genetic predisposition to elevated urate and risk of gout  [@Hollis-Moffatt2009; @Hollis-Moffatt2011; @Phipps-Green2010]. The prevalence of metabolic syndrome in US gout patients is ~60%, or nearly 3 fold higher than US adults without gout [@Choi2007b].
 
 Variability in serum urate explained by the main urate loci _SLC2A9_ and _ABCG2_, expressed in the kidney, is 3.4%. Twenty six other loci associated with serum urate explain a further 3.6% of the variance [@Kottgen2013]. The heritability of serum uric acid ranging from 40 - 70% [@Nath2007; @Yang2005]. This difference in explained variability and total heritability leaves a large component yet to be explained. This missing heritability could be reduced through identifying additional variance attributed to non-additive effects.
 
