--- a/references.bib
+++ b/references.bib
@@ -192,8 +192,8 @@ title = {{Pattern of nucleotide substitution at major histocompatibility complex
 volume = {335},
 year = {1988}
 }
-@article{ALLISON1956,
-author = {ALLISON, A. C.},
+@article{Allison1956,
+author = {Allison, A. C.},
 doi = {10.1111/j.1469-1809.1971.tb00266.x},
 issn = {00034800},
 journal = {Annals of Human Genetics},
@@ -202,11 +202,12 @@ month = {sep},
 number = {1},
 pages = {67--89},
 pmid = {13340560},
-title = {{THE SICKLE-CELL and HAEMOGLOBIN C GENES IN SOME AFRICAN POPULATIONS}},
+title = {{The Sickle-cell and haemoglobin C genes in some African populations}},
 url = {http://doi.wiley.com/10.1111/j.1469-1809.1971.tb00266.x},
 volume = {21},
 year = {1956}
 }
+
 @article{Charlesworth1993,
 abstract = {Selection against deleterious alleles maintained by mutation may cause a reduction in the amount of genetic variability at linked neutral sites. This is because a new neutral variant can only remain in a large population for a long period of time if it is maintained in gametes that are free of deleterious alleles, and hence are not destined for rapid elimination from the population by selection. Approximate formulas are derived for the reduction below classical neutral values resulting from such background selection against deleterious mutations, for the mean times to fixation and loss of new mutations, nucleotide site diversity, and number of segregating sites. These formulas apply to random-mating populations with no genetic recombination, and to populations reproducing exclusively asexually or by self-fertilization. For a given selection regime and mating system, the reduction is an exponential function of the total mutation rate to deleterious mutations for the section of the genome involved. Simulations show that the effect decreases rapidly with increasing recombination frequency or rate of outcrossing. The mean time to loss of new neutral mutations and the total number of segregating neutral sites are less sensitive to background selection than the other statistics, unless the population size is of the order of a hundred thousand or more. The stationary distribution of allele frequencies at the neutral sites is correspondingly skewed in favor of rare alleles, compared with the classical neutral result. Observed reductions in molecular variation in low recombination genomic regions of sufficiently large size, for instance in the centromere-proximal regions of Drosophila autosomes or in highly selfing plant populations, may be partly due to background selection against deleterious mutations.},
 author = {Charlesworth, B. and Morgan, M. T. and Charlesworth, D.},
@@ -1196,6 +1197,25 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/22138821},
 volume = {9},
 year = {2012}
 }
+@article{Delaneau2013,
+author = {Delaneau, Olivier and Zagury, Jean-Francois and Marchini, Jonathan},
+doi = {10.1038/nmeth.2307},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Delaneau, Zagury, Marchini - 2013 - Improved whole-chromosome phasing for disease and population genetic studies.pdf:pdf},
+issn = {1548-7105},
+journal = {Nature methods},
+keywords = {Algorithms,Bayes Theorem,Chromosomes, Human,Chromosomes, Human: genetics,Computer Simulation,Genetics, Population,Haplotypes,Haplotypes: genetics,Humans,Models, Genetic,Polymorphism, Single Nucleotide,Polymorphism, Single Nucleotide: genetics},
+month = {jan},
+number = {1},
+pages = {5--6},
+pmid = {23269371},
+publisher = {Nature Publishing Group},
+title = {{Improved whole-chromosome phasing for disease and population genetic studies.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/23269371},
+volume = {10},
+year = {2013}
+}
+
+
 @article{Korte2013,
 abstract = {Over the last 10 years, high-density SNP arrays and DNA re-sequencing have illuminated the majority of the genotypic space for a number of organisms, including humans, maize, rice and Arabidopsis. For any researcher willing to define and score a phenotype across many individuals, Genome Wide Association Studies (GWAS) present a powerful tool to reconnect this trait back to its underlying genetics. In this review we discuss the biological and statistical considerations that underpin a successful analysis or otherwise. The relevance of biological factors including effect size, sample size, genetic heterogeneity, genomic confounding, linkage disequilibrium and spurious association, and statistical tools to account for these are presented. GWAS can offer a valuable first insight into trait architecture or candidate loci for subsequent validation.},
 author = {Korte, Arthur and Farlow, Ashley},
@@ -1476,7 +1496,7 @@ year = {2008}
 }
 @article{1KGP2010,
 abstract = {The 1000 Genomes Project aims to provide a deep characterization of human genome sequence variation as a foundation for investigating the relationship between genotype and phenotype. Here we present results of the pilot phase of the project, designed to develop and compare different strategies for genome-wide sequencing with high-throughput platforms. We undertook three projects: low-coverage whole-genome sequencing of 179 individuals from four populations; high-coverage sequencing of two mother-father-child trios; and exon-targeted sequencing of 697 individuals from seven populations. We describe the location, allele frequency and local haplotype structure of approximately 15 million single nucleotide polymorphisms, 1 million short insertions and deletions, and 20,000 structural variants, most of which were previously undescribed. We show that, because we have catalogued the vast majority of common variation, over 95{\%} of the currently accessible variants found in any individual are present in this data set. On average, each person is found to carry approximately 250 to 300 loss-of-function variants in annotated genes and 50 to 100 variants previously implicated in inherited disorders. We demonstrate how these results can be used to inform association and functional studies. From the two trios, we directly estimate the rate of de novo germline base substitution mutations to be approximately 10(-8) per base pair per generation. We explore the data with regard to signatures of natural selection, and identify a marked reduction of genetic variation in the neighbourhood of genes, due to selection at linked sites. These methods and public data will support the next phase of human genetic research.},
-author = {{The 1000 Genomes Project Consortium}},
+author = {{1000 Genomes Project Consortium}},
 doi = {10.1038/nature09534},
 file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/The 1000 Genomes Project Consortium - 2010 - A map of human genome variation from population scale sequencing.xls:xls;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/The 1000 Genomes Project Consortium - 2010 - A map of human genome variation from population scale sequencing.pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/The 1000 Genomes Project Consortium - 2010 - A map of human genome variation from population scale sequencing(2).pdf:pdf},
 institution = {Wellcome Trust Sanger Institute, Wellcome Trust Genome Campus, Cambridge CB10 1SA, UK. rd@sanger.ac.uk},
@@ -1495,9 +1515,9 @@ url = {http://www.nature.com/doifinder/10.1038/nature09534 http://dash.harvard.e
 volume = {467},
 year = {2010}
 }
-@article{Abecasis2012,
+@article{1KGP2012,
 abstract = {By characterizing the geographic and functional spectrum of human genetic variation, the 1000 Genomes Project aims to build a resource to help to understand the genetic contribution to disease. Here we describe the genomes of 1,092 individuals from 14 populations, constructed using a combination of low-coverage whole-genome and exome sequencing. By developing methods to integrate information across several algorithms and diverse data sources, we provide a validated haplotype map of 38 million single nucleotide polymorphisms, 1.4 million short insertions and deletions, and more than 14,000 larger deletions. We show that individuals from different populations carry different profiles of rare and common variants, and that low-frequency variants show substantial geographic differentiation, which is further increased by the action of purifying selection. We show that evolutionary conservation and coding consequence are key determinants of the strength of purifying selection, that rare-variant load varies substantially across biological pathways, and that each individual contains hundreds of rare non-coding variants at conserved sites, such as motif-disrupting changes in transcription-factor-binding sites. This resource, which captures up to 98{\%} of accessible single nucleotide polymorphisms at a frequency of 1{\%} in related populations, enables analysis of common and low-frequency variants in individuals from diverse, including admixed, populations.},
-author = {{The 1000 Genomes Project Consortium}},
+author = {{1000 Genomes Project Consortium}},
 doi = {10.1038/nature11632},
 file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/The 1000 Genomes Project Consortium - Unknown - An {\#} integrated {\#} map {\#} of {\#} genetic {\#} Supplementary , Material !.pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/The 1000 Genomes Project Consortium - 2012 - An integrated map of genetic variation from 1,092 human genomes.pdf:pdf},
 issn = {1476-4687},
@@ -2510,8 +2530,8 @@ volume = {9},
 year = {2013}
 }
 
-@article{Auton2015,
-author = {{The 1000 Genomes Project Consortium}},
+@article{1KGP2015snp,
+author = {{1000 Genomes Project Consortium}},
 doi = {10.1038/nature15393},
 file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/The 1000 Genomes Project Consortium - 2015 - A global reference for human genetic variation.pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/The 1000 Genomes Project Consortium - 2015 - A global reference for human genetic variation(2).pdf:pdf},
 issn = {0028-0836},
@@ -2578,4 +2598,37 @@ title = {{The neutral theory of molecular evolution}},
 url = {http://www.jstor.org/stable/10.2307/2097289 http://www.jstor.org/stable/2097289 http://www.nature.com/doifinder/10.1038/scientificamerican1179-98},
 volume = {241},
 year = {1979}
+}
+
+@article{Cadzow2016,
+author = {Cadzow, Murray and Merriman, Tony R. and Boocock, James and Dalbeth, Nicola and Stamp, Lisa K. and Black, Michael A. and Visscher, Peter M. and Wilcox, Phillip L.},
+doi = {10.1186/s12881-016-0341-z},
+file = {:home/murraycadzow/Dropbox/Papers/art{\%}3A10.1186{\%}2Fs12881-016-0341-z.pdf:pdf},
+issn = {1471-2350},
+journal = {BMC Medical Genetics},
+keywords = {Natural selection,Selective sweeps,Thrifty gene,Go,ac,bmi,correspondence,gout,natural selection,nz,otago,phillip,selective sweeps,thrifty gene,type 2 diabetes,wilcox},
+number = {1},
+pages = {80},
+publisher = {BMC Medical Genetics},
+title = {{Lack of direct evidence for natural selection at the candidate thrifty gene locus, PPARGC1A}},
+url = {http://bmcmedgenet.biomedcentral.com/articles/10.1186/s12881-016-0341-z},
+volume = {17},
+year = {2016}
+}
+
+@article{Minster2016,
+abstract = {Samoans are a unique founder population with a high prevalence of obesity –3 , making them well suited for identifying new genetic contributors to obesity 4 . We conducted a genome-wide association study (GWAS) in 3,072 Samoans, discovered a variant, rs253649, strongly associated with body mass index (BMI) (P = 5.3 × 0 −4), and replicated the association in 2,02 additional Samoans (P = .2 × 0 −9). Targeted sequencing identified a strongly associated missense variant, rs373863828 (p.Arg457Gln), in CREBRF (meta P = .4 × 0 −20). Although this variant is extremely rare in other populations, it is common in Samoans (frequency of 0.259), with an effect size much larger than that of any other known common BMI risk variant (.36–.45 kg/m 2 per copy of the risk-associated allele). In comparison to wild-type CREBRF, the Arg457Gln variant when overexpressed selectively decreased energy use and increased fat storage in an adipocyte cell model. These data, in combination with evidence of positive selection of the allele encoding p.Arg457Gln, support a 'thrifty' variant hypothesis as a factor in human obesity. Obesity is essentially a disorder of energy homeostasis and has strong genetic and environmental components. As diets have modernized and physical activity has decreased, the prevalence of overweight and obesity in Samoa has escalated to be among the highest in the world. In 2003, 68{\%} of men and 84{\%} of women in Samoa were overweight or obese by Polynesian cutoffs (BMI {\textgreater}26 kg/m 2) 1 ; by 2010, prevalence had increased to 80{\%} and 91{\%}, respectively 3 . Although the contri-bution of environmental factors to this trend is clear, the estimated 45{\%} heritability of BMI in Samoans remains largely unexplained 1 . Genetic susceptibility to obesity in the contemporary obesogenic environment may have resulted from putative selective advantages from efficient energy metabolism acquired during 3,000 years of Polynesian island discoveries, settlement, and population dynam-ics 5–8 and/or from genetic drift due to founder effects, small popula-tion sizes, and population bottlenecks 9–11 . To discover genes influencing BMI, we genotyped 659,492 mark-ers across the genome in our discovery sample of 3,072 Samoans recruited from 33 villages across Samoa using the Affymetrix 6.0 chip (Supplementary Fig. 1 and Supplementary Table 1). We adjusted for population substructure and inferred relatedness using an empirical kinship matrix and then tested for association with BMI using lin-ear mixed models. Quantile–quantile plots indicated that P-value inflation was well controlled ($\lambda$ GC = 1.07) (Supplementary Fig. 2). By far, the strongest association with BMI occurred at rs12513649 (P = 5.3 × 10 −14) on chromosome 5q35.1 (Fig. 1a), and this associa-tion was strongly replicated (P = 1.2 × 10 −9) in 2,102 adult Samoans from a 1990–1995 longitudinal study and a 2002–2003 family study, with participants of each study drawn from both American Samoa and Samoa (Table 1 and Supplementary Table 1). To fine-map the region encompassing this signal, we used the Affymetrix-based geno-types to select 96 individuals optimal for targeted sequencing of a 1.5-Mb region centered on rs12513649. The haplotypes generated from the sequencing data were used to impute genotypes for the rest of the discovery sample. Analyses of the imputed data highlighted two significantly associated variants in CREBRF (encoding CREB3 regu-latory factor), rs150207780 and rs373863828 (Fig. 1b). Because of high linkage disequilibrium (LD) in the region, conditional analyses were not able to distinguish between the top variants on statisti-cal grounds (Supplementary Fig. 3). Annotation indicated that neither rs12513649, located between ATP6V0E1 and CREBRF, nor rs150207780, located in intron 1 of CREBRF, had any predicted regu-latory function, drawing our attention to rs373863828, which was},
+author = {Minster, Ryan L and Hawley, Nicola L and Su, Chi-Ting and Sun, Guangyun and Kershaw, Erin E and Cheng, Hong and Buhule, Olive D and Lin, Jerome and Reupena, Sefuiva and Viali, Itea and Tuitele, John and Naseri, Take and Urban, Zsolt and Deka, Ranjan and Weeks, Daniel E and McGarvey, Stephen T},
+doi = {10.1038/ng.3620},
+file = {:home/murraycadzow/Dropbox/Papers/ng.3620.pdf:pdf},
+issn = {1061-4036},
+journal = {Nature Publishing Group},
+number = {9},
+pages = {1--9},
+pmid = {27455349},
+publisher = {Nature Publishing Group},
+title = {{A thrifty variant in CREBRF strongly influences body mass index in Samoans}},
+url = {http://dx.doi.org/10.1038/ng.3620},
+volume = {48},
+year = {2016}
 }
